K8s/auto/3-networking/0-routes/0-auth-service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-service-route
  labels:
    app: togather
    service: auth-srv
    security: secret # enables the jwt security policy
spec:
  parentRefs:
    - name: togather-gateway
      namespace: envoy-gateway

  # hostnames:
  # - "api.togather.com"
  #   # Auth endpoints

  rules:
    - name: admin-public
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth/admin/login
        - path:
            type: PathPrefix
            value: /api/v1/auth/admin/signup
        - path:
            type: PathPrefix
            value: /api/v1/auth/admin/resend-verification
        - path:
            type: PathPrefix
            value: /api/v1/auth/admin/verify-email
        - path:
            type: PathPrefix
            value: /api/v1/auth/admin/2fa/verify
      backendRefs:
        - name: auth-srv
          port: 3000
    - name: user-public
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth/user/login
        - path:
            type: PathPrefix
            value: /api/v1/auth/user/signup
        - path:
            type: PathPrefix
            value: /api/v1/auth/user/resend-verification
        - path:
            type: PathPrefix
            value: /api/v1/auth/user/verify-email
      backendRefs:
        - name: auth-srv
          port: 3000

    - name: health-public
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth/health
      backendRefs:
        - name: auth-srv
          port: 3000

    # - name: admin-protected
    #   matches:
    #     - path:
    #         type: PathPrefix
    #         value: /api/v1/auth/admin/2fa/initiate
    #     - path:
    #         type: PathPrefix
    #         value: /api/v1/auth/admin/2fa/enable
    #   backendRefs:
    #     - name: auth-srv
    #       port: 3000

    - name: auth-protected
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth
      backendRefs:
        - name: auth-srv
          port: 3000
# ---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: SecurityPolicy
# metadata:
#   name: public-auth
# spec:
#   targetRefs:
#     - group: gateway.networking.k8s.io
#       kind: HTTPRoute
#       name: auth-service-route
#       sectionName: admin-public
#     - group: gateway.networking.k8s.io
#       kind: HTTPRoute
#       name: auth-service-route
#       sectionName: health-public
#     - group: gateway.networking.k8s.io
#       kind: HTTPRoute
#       name: auth-service-route
#       sectionName: user-public
#   # no jwt here → overrides parent and disables auth on these rules
#   # this config will be overriding the jwt security policy set on other http route sections
