K8s/auto/3-networking/0-routes/auth-admin-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-service-admin-route
  labels:
    app: togather
    service: auth-srv
    # security: secret # enables the jwt security policy
spec:
  parentRefs:
    - name: togather-gateway
      namespace: envoy-gateway

  # hostnames:
  # - "api.togather.com"
  #   # Auth endpoints

  rules:
    - name: admin-protected
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth/admin/2fa/initiate
        - path:
            type: PathPrefix
            value: /api/v1/auth/admin/2fa/enable
      backendRefs:
        - name: auth-srv
          port: 3000

    - name: auth-protected
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth
      backendRefs:
        - name: auth-srv
          port: 3000
